@@ -1,3 +1,8 @@
+2005-07-28  Joseph S. Myers  <joseph@codesourcery.com>
+
+	PR c/21873
+	* gcc.dg/init-excess-1.c: New test.
+
 2005-07-28  Richard Sandiford  <richard@codesourcery.com>
 
 	PR c/20187
